--- a/packages/websites/coffeekraken-io/src/css/generic/icon-card.css
+++ b/packages/websites/coffeekraken-io/src/css/generic/icon-card.css
@@ -1,12 +1,51 @@
 .icon-card {
-    aspect-ratio: 1;
     position: relative;
+    aspect-ratio: 1;
+    display: block;
+    width: 100%;
     border-radius: sugar.border.radius();
-    @sugar.depth (100, $type: text);
-    background-size: cover;
-    background-position: 50% 50%;
-    filter: grayscale(0.1);
-    overflow: hidden;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    transition: sugar.transition();
+    z-index: 1;
+
+    &:hover {
+        box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
+        z-index: 0;
+    }
+
+    .icon-card__content {
+        aspect-ratio: 1;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: sugar.border.radius();
+        @sugar.depth (100, $type: text);
+        background-size: cover;
+        background-position: 50% 50%;
+        filter: grayscale(0.1);
+        overflow: hidden;
+        background-image: var(--image);
+    }
+
+    &:before {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: calc(100%);
+        height: calc(100%);
+        background-image: var(--image);
+        filter: blur(0);
+        opacity: 0;
+        transition: sugar.transition();
+    }
+    &:hover:before {
+        filter: blur(30px);
+        opacity: 1;
+    }
 
     i,
     p {
@@ -20,9 +59,10 @@
         font-size: 100px;
         position: absolute;
         z-index: 1;
-        top: calc(50% - 20px);
+        bottom: calc(50% + 20px);
         left: 50%;
-        transform: translate(-50%, -50%);
+        transform: translate(-50%, 50%);
+        transform-origin: 0 100%;
 
         @sugar.media mobile {
             font-size: 50px;
@@ -42,29 +82,28 @@
         }
     }
 
-    &:after {
-        opacity: 1;
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 200%;
-        height: 200%;
-        transform-origin: 0 0;
-        transform: translateX(30%) translateY(-30%) rotateZ(45deg);
-        transition: all 0.3s sugar.theme(easing.default);
-        background-color: sugar.color(current);
+    .icon-card__content {
+        &:after {
+            opacity: 1;
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 200%;
+            height: 200%;
+            transform-origin: 0 0;
+            transform: translateX(30%) translateY(-30%) rotateZ(45deg);
+            transition: all 0.3s sugar.theme(easing.default);
+            background-color: sugar.color(current);
+        }
     }
 
     &[style] {
         &:hover i {
-            transform: scale(0.3) translate(-100%);
-            top: 50%;
-            left: 50%;
-
-            @sugar.media >=wide {
-                transform: scale(0.4) translate(-170%, 70%);
-            }
+            /* transform: translate(-100%); */
+            transform: scale(0.4) translate(0, 0);
+            bottom: 7%;
+            left: 7%;
         }
 
         &:hover p {
@@ -72,7 +111,7 @@
             top: calc(50% + 70px);
             transition-delay: 0s;
         }
-        &:hover:after {
+        &:hover .icon-card__content:after {
             transform: translateX(-25%) translateY(0%) rotateZ(45deg);
         }
     }
