--- a/packages/app/s-dashboard/src/css/index.css
+++ b/packages/app/s-dashboard/src/css/index.css
@@ -5,10 +5,11 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.3);
+    /* background: rgba(0, 0, 0, 0.3); */
+    background: sugar.color(base, --alpha 0.1);
     pointer-events: none;
     opacity: 0;
-    backdrop-filter: blur(15px);
+    backdrop-filter: blur(40px);
     @sugar.transition (fast);
 
     &.active {
