--- a/packages/@examples/01-basic/src/views/layouts/header/header.css
+++ b/packages/@examples/01-basic/src/views/layouts/header/header.css
@@ -1,35 +1,37 @@
 .header {
-  position: fixed;
-  top: sugar.margin(30);
-  width: 100%;
-  z-index: 100;
-  @sugar.transition();
+    position: fixed;
+    top: sugar.margin(30);
+    width: 100%;
+    z-index: 100;
+    @sugar.transition();
 
-  body.scrolled & {
-    top: 0;
-  }
-
-  .s-container {
-    position: relative;
-
-    &:before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: calc(sugar.margin(30) * -1);
-      right: calc(sugar.margin(30) * -1);
-      bottom: 0;
-      z-index: -1;
-      background: sugar.color(base, surface);
-      opacity: 0;
-      @sugar.border.radius();
-      @sugar.depth (100);
-      @sugar.transition();
-
-      body.scrolled & {
-        opacity: 1;
-        background: sugar.color(base, surface, --darken 5%);
-      }
+    body.scrolled & {
+        top: 0;
     }
-  }
+
+    .s-container {
+        position: relative;
+        perspective: 800px;
+
+        &:before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: calc(sugar.margin(30) * -1);
+            right: calc(sugar.margin(30) * -1);
+            bottom: 0;
+            z-index: -1;
+            background: sugar.color(base, surface);
+            opacity: 0;
+            transform: rotateX(-10deg) rotateY(1deg) translateX(2%) scale(1.1);
+            @sugar.border.radius();
+            @sugar.depth (100);
+            @sugar.transition();
+
+            body.scrolled & {
+                opacity: 1;
+                background: sugar.color(base, surface, --darken 5%);
+            }
+        }
+    }
 }
